# vest-dotnet

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/vest/dotnet/: __init__.py  aot.py  sdk.py
